--- a/src/Telegram.Bot.Pipelined/Telegram.Bot.Pipelined.csproj
+++ b/src/Telegram.Bot.Pipelined/Telegram.Bot.Pipelined.csproj
@@ -6,12 +6,39 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<Authors>NinPhi</Authors>
+		<PackageId>Telegram.Bot.Pipelined</PackageId>
+		<Title>Telegram.Bot.Pipelined</Title>
+		<Description>Open-source Telegram.Bot extension library for ASP.NET Core pipeline integration.</Description>
+		<PackageTags>telegram;telegramapi;telegrambot;bot;pipeline;pipelined;aspnetcore;aspnet</PackageTags>
+		<PackageProjectUrl>https://github.com/NinPhi/Telegram.Bot.Pipelined</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/NinPhi/Telegram.Bot.Pipelined</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>icon.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<AssemblyVersion>1.0.0</AssemblyVersion>
+		<FileVersion>1.0.0</FileVersion>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <None Include="..\..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\res\icon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Telegram.Bot" Version="19.0.0" />
 	</ItemGroup>
 
